--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     
     <!-- SEO Meta Tags -->
     <base href="/">
+    <style>
+  /* 强制修复 LOGO 大小 */
+  .header-logo {
+    max-width: 150px !important;
+    height: auto !important;
+  }
+</style>
+
     <title>WOOD WELL LIMITED - Global Commodity Trading Expert Since 2001</title>
     <meta name="description" content="Leading Hong Kong-based international trading company specializing in sulfur, petroleum products, LNG, and pulp commodities. 24+ years of professional experience serving global markets." />
     <meta name="keywords" content="commodity trading, sulfur trading, petroleum products, LNG, pulp trading, international trade, Hong Kong trading company, global supply chain" />
