--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     
     <!-- SEO Meta Tags -->
     <base href="/">
-    <style>
-  /* 强制修复 LOGO 大小 */
-  .header-logo {
-    max-width: 150px !important;
+<style>
+  /* 强制修复 LOGO 大小：针对 Tailwind 类名进行覆盖 */
+  .img-12w {
+    max-width: 150px !important; /* 设定一个合理的宽度 */
     height: auto !important;
   }
 </style>
+
 
     <title>WOOD WELL LIMITED - Global Commodity Trading Expert Since 2001</title>
     <meta name="description" content="Leading Hong Kong-based international trading company specializing in sulfur, petroleum products, LNG, and pulp commodities. 24+ years of professional experience serving global markets." />
