--- a/404.html
+++ b/404.html
@@ -7,6 +7,20 @@
     
     <!-- SEO Meta Tags -->
     <base href="/">
+<style>
+  /* 强制修复 LOGO 大小：针对 LOGO 图像的 alt 属性进行覆盖 */
+  img[alt="WOOD WELL LIMITED"] {
+    max-width: 150px !important; /* 设定一个合理的宽度 */
+    height: auto !important;
+  }
+  /* 确保父级容器不会导致溢出 */
+  .img-12w {
+    max-width: 150px !important;
+    height: auto !important;
+  }
+</style>
+
+
     <title>WOOD WELL LIMITED - Global Commodity Trading Expert Since 2001</title>
     <meta name="description" content="Leading Hong Kong-based international trading company specializing in sulfur, petroleum products, LNG, and pulp commodities. 24+ years of professional experience serving global markets." />
     <meta name="keywords" content="commodity trading, sulfur trading, petroleum products, LNG, pulp trading, international trade, Hong Kong trading company, global supply chain" />
